# tcc-evals

./: .env.example  .gitignore  CLAUDE.md  CLI_USAGE.md  README.md  alembic.ini  cli.py  pyproject.toml  run.py  test_groq_instructor.py
.claude/: settings.local.json
alembic/: env.py
alembic/versions/: 0a789b3dd96f_adicionar_flags_para_perguntas.py  1a1304ab27b2_add_human_annotation_fields.py  4d0980c0357b_adicionar_flag_interessante_para_.py  53c316573303_adicionar_campos_norma_tecnica_e_item_.py  81ffe35fb693_renomear_coluna_precisao_para_.py  a9f8eca9864b_add_configuracao_and_resposta_dada_.py  b74f33730e1a_criar_tabelas_iniciais.py
app/: __init__.py  database.py  init_data.py  main.py  models.py  schemas.py
app/cli/: __init__.py  experiment_runner.py  main.py
app/evaluation/: __init__.py  contextual_evaluator.py  models.py
app/routers/: __init__.py  analises.py  anotacoes.py  dashboard.py  experimentos.py  perguntas.py
static/css/: input.css  output.css
templates/: base.html  dashboard.html
templates/analises/: geral.html
templates/anotacoes/: lista.html
templates/components/: filters.html  pagination.html
templates/experimentos/: detalhe.html  form.html  lista.html  matriz.html
templates/perguntas/: detalhe.html  form.html  lista.html
